<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_search"
      android:icon="@drawable/ic_search_category_default"
      android:title="@string/action_search"
      android:actionViewClass="android.widget.SearchView"
      android:showAsAction="ifRoom|collapseActionView"
      />
 
         <item
        android:id="@+id/action_group_chat"
      android:icon="@drawable/ic_menu_allfriends"
      android:title="@string/menu_group_chat"
      />
            <item
        android:id="@+id/action_add_friend"
      android:icon="@drawable/ic_menu_invite"
      android:title="@string/menu_addfriend"
      />
               <item
        android:id="@+id/action_scan"
      android:icon="@drawable/ic_search_category_default"
      android:title="@string/menu_scan"
      />
                  <item
        android:id="@+id/action_feedback"
      android:icon="@drawable/ic_menu_notifications"
      android:title="@string/menu_feedback"
      />
                  

</menu>
