<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:hyman="http://schemas.android.com/apk/res/org.mark.androiddemo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >
<android.support.v4.view.ViewPager
    android:id="@+id/id_viewpager"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1">
    
</android.support.v4.view.ViewPager>
<LinearLayout
    android:background="@drawable/tab_bg"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:orientation="horizontal">
    
<org.mark.androiddemo.ChangeColorIconWithText 
         android:id="@+id/id_indicator_one"
         android:layout_width="0dp"
         android:layout_height="fill_parent"
         android:layout_weight="1" 
         hyman:color="#ff45c01a"
         hyman:text="@string/app_name"
         hyman:text_size="12dp"
         hyman:icon="@drawable/ic_menu_notifications" />

<org.mark.androiddemo.ChangeColorIconWithText 
    android:id="@+id/id_indicator_two"
         android:layout_width="0dp"
         android:layout_height="fill_parent"
         android:layout_weight="1" 
         hyman:color="#ff45c01a"
         hyman:text="tab_contact"
         hyman:text_size="12dp"
         hyman:icon="@drawable/ic_menu_friendslist" />

<org.mark.androiddemo.ChangeColorIconWithText 
    android:id="@+id/id_indicator_three"
         android:layout_width="0dp"
         android:layout_height="fill_parent"
         android:layout_weight="1" 
         hyman:color="#ff45c01a"
         hyman:text="@string/tab_found"
         hyman:text_size="12dp"
         hyman:icon="@drawable/ic_search_category_default" />

<org.mark.androiddemo.ChangeColorIconWithText 
    android:id="@+id/id_indicator_four"
         android:layout_width="0dp"
         android:layout_height="fill_parent"
         android:layout_weight="1" 
         hyman:color="#ff45c01a"
         hyman:text="@string/tab_me"
         hyman:text_size="12dp"
         hyman:icon="@drawable/ic_menu_my_calendar" />

    
    
    
    
    
    </LinearLayout>
    
   

</LinearLayout>